<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
	android:key="semassist_settings" 
	android:title="Global Settings" 
	android:summary="prefSummary goes here">
	
    <PreferenceCategory 
        android:title="@string/lblPrefConnectivity">
        <ListPreference
            android:key="selected_server_option"
            android:title="@string/lblPrefServer"
            android:summary="@string/lblPrefServerSumm"
            android:entries="@array/server_options"
            android:entryValues="@array/server_options_values"
            android:dialogTitle="@string/lblServerDialog"
            android:defaultValue="default_value" />
        
        <EditTextPreference
                android:key="new_server_info"
                android:name="Server Information"
                android:summary="Define a Semantic Assistants server location"
                android:title="Add a new server"/>
    </PreferenceCategory>
</PreferenceScreen>