<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1">
<TableLayout
        android:id="@+id/tblResultsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backrepeat" >

    <TableRow
        android:id="@+id/rowTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblContent"
            style="@style/titleText" />

        <TextView
            android:id="@+id/txtType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblType"
            style="@style/titleText" />

        <TextView
            android:id="@+id/txtStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblStart"
            style="@style/titleText" />

        <TextView
            android:id="@+id/textEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEnd"
            style="@style/titleText" />

        <TextView
            android:id="@+id/txtFeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFeats"
            style="@style/titleText" />
        
    </TableRow>
</TableLayout>
</ScrollView>