<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/linearLayout1"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:padding="15dip">
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
           
            <TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:id="@+id/uc_lbl_username"
			android:text="@string/lblAccountUser"
			style="@style/normalText">
            </TextView>
		
			<EditText android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:id="@+id/uc_txt_username"
			android:inputType="textEmailAddress">
			</EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/uc_lbl_password"
			android:text="@string/lblAccountPass"
			style="@style/normalText">
		</TextView>
		
		<EditText android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:id="@+id/uc_txt_password"
			android:inputType="textPassword">
		</EditText>
        </TableRow>
    </TableLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:id="@+id/relativeLayout1" android:layout_height="fill_parent"
			android:gravity="bottom">
			
			<Button android:layout_alignParentLeft="true"
				android:onClick="onCancelClick"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/uc_cmd_cancel" android:text="@string/lblCancel">
			</Button>
			
			<Button android:layout_alignParentRight="true"
				android:onClick="onSaveClick"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/uc_cmd_ok"
				android:text="@string/lblSignIn">
			</Button>
			
		</RelativeLayout>
</LinearLayout>
