<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:background="@drawable/backrepeat">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:id="@+id/servicesLayout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1" 
    	android:orientation="vertical">
    
	    <TextView android:id="@+id/lblAvAssist" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize = "20dip"
	        android:text="@string/lblServiceList"
	        android:textColor="#FF8C00">
	    </TextView>
	    
	    <ListView
	  		android:id="@+android:id/list"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:divider="#FFFFFF">
		</ListView>
		
    </LinearLayout>
    
    <ScrollView 
            android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:layout_weight="1">
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:focusable="true"
	    	android:focusableInTouchMode="true">
	    	
		    <TextView android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:textSize = "20dip"
		            android:text="@string/lblInput"
		            android:textColor="#FF8C00">
		    </TextView>
		    
		    <EditText
		        android:id="@+id/txtInput"
		        android:layout_width="match_parent"
		        android:layout_height="600dip"
		        android:inputType="textMultiLine"
		        android:gravity="top"
		        android:hint="@string/txtInputSample">
		    </EditText> 
		    <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        <Button
		        android:id="@+id/btnClear"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		       	android:layout_alignParentRight="true"
		        android:text="@string/btnClearLabel">
		    </Button>  
	    </RelativeLayout>
	    </LinearLayout>
	</ScrollView>
</LinearLayout>